Fix and clean up z-index

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,6 @@ html, body {
     background-color: #FFF;
     line-height: 50px;
     border-bottom: 1px solid #CECECE;
-    z-index: 200;
     overflow: visible !important;
 }
 .action.header > div {
@@ -237,7 +236,6 @@ html, body {
 .torrent.context.menu {
     display: none;
     position: absolute;
-    z-index: 300;
 }
 .torrent.context.menu .ui.vertical.menu {
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.15);
@@ -247,7 +245,6 @@ html, body {
     background-color: #F0F0F0;
     height: 100%;
     width: 100%;
-    z-index: 500;
 }
 
 .meta.text {
@@ -346,7 +343,6 @@ html, body {
     right: 15px;
     width: 375px;
     position: absolute;
-    z-index: 100000;
 }
 .notification {
     margin: 5px;
@@ -441,7 +437,6 @@ html, body {
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 2000;
     -webkit-transform-origin: center center;
     background-color: rgba(255, 255, 255, 0.5);
 }
